--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,6 @@
 body{
-  //background: #000000 url("./img/logo.jpg") no-repeat fixed center top;
+  background: #CCCCCC;
 }
 .carousel{
   background: #777;
-}
-.item,
-.active {
-      height: 100%;
-}
-
-.fill {
-  width: 100%;
-  height: 100%;
-  background-position: center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
 }
