--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,14 @@
 body{
-  //background: #CCCCCC;
-  padding-top: 50px;
+	background: #203744;
+	padding-top: 50px;
+}
+#about{
+	background:#769164;
+}
+hr{
+	color:#444;
 }
 .carousel{
-  //background: #777;
-  background: #000000;
+	//background: #777;
+	background: #000000;
 }
