totally not finished but Calculus is over

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
 body{
-	background: #203744;
+//	background: #203744;
+	background: #000000;
 	padding-top: 50px;
+	color: #fff;
+}
+#bands{
+	padding-top: 60px;
 }
 #about{
-	background:#769164;
+	background:#000000;
 }
 hr{
 	color:#444;
@@ -11,4 +16,16 @@ hr{
 .carousel{
 	//background: #777;
 	background: #000000;
+}
+.navbar{
+	background: #4d4398;
+	color: #fff;
+}
+.navbar-brand{
+	color: #fff;
+}
+.well{
+	padding-top: 20px;
+	background: #000000;
+	border: 0px;
 }
