--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body{
 //	background: #203744;
 	background: #000000;
-	padding-top: 50px;
 	color: #fff;
 }
 #bands{
@@ -24,8 +23,14 @@ hr{
 .navbar-brand{
 	color: #fff;
 }
+.navbar-nav{
+	color: #fff;
+}
 .well{
 	padding-top: 20px;
 	background: #000000;
 	border: 0px;
+}
+.navbar-nav > li > a{
+	color: #fff;
 }
